xraylib/Acq.h

/** 
* AcquisitionDesc defines a data structure that is 
* used by all functions of XISL. It contains all 
* required parameters for the acquisition.
* Access to the data fields is only possible via 
* the XISL API functions. HACQDESC defines a HANLDE to the acquisition descriptor.
* @see AcquisitionDesc
* @ingroup enum
**/
typedef HANDLE HACQDESC;
typedef struct
{
	WORD	wHeaderID;		// 0
	WORD	wPROMID;		// 1
	WORD	wResolutionX;	// 2
	WORD	wResolutionY;	// 3
	WORD	wNrRows;		// 4
	WORD	wNrColumns;		// 5
	WORD	wZoomULRow;		// 6
	WORD	wZoomULColumn;	// 7
	WORD	wZoomBRRow;		// 8
	WORD	wZoomBRColumn;	// 9
	WORD	wFrmNrRows;		// A
	WORD	wFrmRowType;	// B
	WORD	wRowTime;		// C << 6
	WORD	wClock;			// D << 6
	WORD	wDataSorting;	// E
	WORD	wTiming;		// F
	WORD	wGain;			// 10
	WORD	wLeakRows;		// 11
	WORD	wAccess;		// 12
	WORD	wBias;			// 13
	WORD	wUgComp;		// 14
	WORD	wCameratype;	// 15
	WORD	wFrameCnt;		// 16
	WORD	wBinningMode;	// 17
	WORD	wRealInttime_milliSec;	// 18 
	WORD	wRealInttime_microSec;	// 19
	WORD	wStatus;		// 1A
	WORD	wCommand1;		// 1B
	WORD	wCommand2;		// 1C
	WORD	wCommand3;		// 1D
	WORD	wCommand4;		// 1E
	WORD	wDummy;			// 1F
}	CHwHeaderInfoEx;
typedef struct RTC_STRUCT {    
  DWORD year;    
  DWORD month;								// e.g.: 5 for may
  DWORD day;    
  DWORD hour;    
  DWORD minute;    
  DWORD second;    
   
}RTC_STRUCT;
 

typedef struct DETECTOR_BATTERY{    
  DWORD status; 							// D0: present
											// D1: charging
  DWORD serial_no;    
  DWORD cycle_count;    
  DWORD temperature;   						// e.g.: 2510 for 25.1 C 
  DWORD voltage;    						// in mV
  DWORD current;							// in mA (positive or negative)
  DWORD capacity;    						// in %
  DWORD energy;    							// in mWh
  DWORD charge;    							// in mAh
      
}DETECTOR_BATTERY;
/* internal voltages and currents of Gen2 detector */
typedef struct DETECTOR_CURRENT_VOLTAGE{
  int iV1;
  int imA1;
  int iV2;
  int imA2;
  int iV3;
  int imA3;
}DETECTOR_CURRENT_VOLTAGE;
/** Possible system control actions for XRpad 
* @ingroup enum
*/
typedef enum {
	XRpad_SYSTEM_CONTROL_REBOOT = 0,           // restart XRpad 
	XRpad_SYSTEM_CONTROL_RESTART_NETWORK = 1,  // restart XRpad Network 
	XRpad_SYSTEM_CONTROL_SHUTDOWN = 2,         // shutdown XRpad
	XRpad_SYSTEM_CONTROL_SET_DEEP_SLEEP = 3,   // power down analog circuitry and sensor FPGA
	XRpad_SYSTEM_CONTROL_SET_IDLE = 4          // power up analog circuitry and sensor FPGA
} XRpad_SystemControlEnum;
/**
* @ingroup enum
*/
typedef struct XRpad_TempSensor
{
    char            index;
    char            name[32];
    BOOL            is_virtual;
    unsigned char   warn_level;
    double          temperature;
} XRpad_TempSensor;
/**
* @ingroup enum
*/
typedef struct XRpad_TempSensorReport
{
    unsigned char   system_warn_level;
    unsigned char   sensor_count;
    unsigned int    shutdown_time;
    XRpad_TempSensor sensors[16];
} XRpad_TempSensorReport;
/**
* @ingroup enum
*/
typedef enum XRpad_ChargeMode
{
    XRpad_NOT_CHARGING = 0,
    XRpad_CHARGING_SLOW = 1,
    XRpad_CHARGING_NORMAL = 2,
    XRpad_CHARGING_FAST = 3,
    XRpad_FULLY_CHARGED = 4,
    XRpad_DISCHARGING = 5
} XRpad_ChargeMode;
/**
* @ingroup enum
*/
typedef enum XRpad_BatteryPresence
{
    XRpad_NO_BATTERY = 0,
    XRpad_BATTERY_INSERTED = 1,
    XRpad_DUMMY_INSERTED = 2
} XRpad_BatteryPresence;
/**
* @ingroup enum
*/
typedef enum XRpad_BatteryHealth
{
    XRpad_BATTERY_OK                    = 0x0000,
    XRpad_COMMUNICATION_ERROR           = 0x0001,
    XRpad_TERMINATE_DISCHARGE_ALARM     = 0x0002,
    XRpad_UNDERVOLTAGE_ALARM            = 0x0004,
    XRpad_OVERVOLTAGE_ALARM             = 0x0008,
    XRpad_OVERTEMPERATURE_ALARM         = 0x0010,
    XRpad_BATTERY_UNKNOWN_ERROR         = 0x0080,

} XRpad_BatteryHealth;
/**
* @ingroup enum
*/
typedef struct XRpad_BatteryStatus
{
    XRpad_BatteryPresence   presence;
    int                     design_capacity;
    int                     remaining_capacity;
    int                     charge_state;
    XRpad_ChargeMode        charge_mode;
    int                     cycle_count;
    int                     temperature;
    int                     authenticated;
    int                     health;
} XRpad_BatteryStatus;
/**
 * @ingroup enum
 */
typedef struct XRpad_ShockEvent
{
    unsigned int    timestamp;
    unsigned int    critical_sensor1;
    unsigned int    critical_sensor2;
    unsigned int    critical_sensor3;
    unsigned int    warning_sensor1;
    unsigned int    warning_sensor2;
    unsigned int    warning_sensor3;
} XRpad_ShockEvent;
/**
 * @ingroup enum
 */
typedef struct XRpad_ShockSensorReport
{
    XRpad_ShockEvent largest;
    XRpad_ShockEvent latest;
} XRpad_ShockSensorReport;
/**
 * @ingroup enum
 */
typedef struct XRpad_VersionInfo
{
    char subversion[256];
    char linux_kernel[32];
    char software[32];
    char hwdriver[32];
    char zynq_firmware[32];
    char spartan_firmware[32];
    char msp_firmware[32];
    char pld_firmware[32];
    char xrpd[32];
    char wlan[32];
} XRpad_VersionInfo;
/** Possible image transfer channels for XRpad
* @ingroup enum
*/
typedef enum XRpad_DataInterfaceControlEnum{
    XRpad_DATA_VIA_LAN = 0,             // use LAN
    XRpad_DATA_VIA_WLAN = 1             // use WLAN
} XRpad_DataInterfaceControlEnum;
/**
* @ingroup enum
*/
typedef enum
{
	LEVEL_TRACE = 0,
	LEVEL_DEBUG,
	LEVEL_INFO,
	LEVEL_WARN,
	LEVEL_ERROR,
	LEVEL_FATAL,
	LEVEL_ALL,
	LEVEL_NONE
} XislLoggingLevels;
/**
* @ingroup enum
*/
typedef void *XislFtpSession;
/**
* @ingroup enum
*/
typedef void *XislFileHandle;
/**
* @ingroup enum
*/
typedef enum XislFileEntryType
{
    XFT_File = 1,
    XFT_Directory = 2,
    XFT_Link = 4,
    // ...
    XFT_Other = 0x80000000,
    XFT_Any = 0xFFFFFFFF
} XislFileEntryType;
/**
* @ingroup enum
*/
typedef enum XislFileStorageLocation
{
    XFSL_Local = 0,
    XFSL_FTP = 1
} XislFileStorageLocation;
typedef struct XislFileInfo
{
    const char *filename;
    const char *directory;
    const char *address;
    size_t filesize;
    XislFileEntryType type;
    const char *timestamp;
    // XislFileStorageLocation location;
} XislFileInfo;
/**
* @ingroup enum
*/
typedef enum ProcScriptOperation
{
	PREBINNING,
	PREMEAN,
	PRESTOREBUFFER,
	OFFSET,
	GAIN,
	MEAN,
	PREVIEW,
	BINNING,
	STOREBUFFER,
	STORESD,
	SEND
} ProcScriptOperation;
/**
* @ingroup enum
*/
typedef enum OnboardBinningMode
{
	ONBOARDBINNING2x1 = 0,
	ONBOARDBINNING2x2 = 1,
	ONBOARDBINNING4x1 = 2,
	ONBOARDBINNING4x4 = 3,
	ONBOARDBINNING3x3 = 4,
	ONBOARDBINNING9to4 = 5
} OnboardBinningMode;
/**
* @ingroup enum
*/
typedef enum XIS_DetectorTriggerMode
{
	TRIGGERMODE_DDD,
	TRIGGERMODE_DDD_WO_CLEARANCE,
	TRIGGERMODE_STARTSTOP,
	TRIGGERMODE_FRAMEWISE,
	TRIGGERMODE_AED,
	TRIGGERMODE_ROWTAG,
	TRIGGERMODE_DDD_POST_OFFSET,
	TRIGGERMODE_DDD_DUAL_POST_OFFSET
}XIS_DetectorTriggerMode;
/**
* @ingroup enum
*/
typedef enum XIS_Detector_TRIGOUT_SignalMode
{
	TRIGOUT_SIGNAL_FRM_EN_PWM,
	TRIGOUT_SIGNAL_FRM_EN_PWM_INV,
	TRIGOUT_SIGNAL_EP,
	TRIGOUT_SIGNAL_EP_INV,
	TRIGOUT_SIGNAL_DDD_Pulse,
	TRIGOUT_SIGNAL_DDD_Pulse_INV,
	TRIGOUT_SIGNAL_GND,
	TRIGOUT_SIGNAL_VCC
}XIS_Detector_TRIGOUT_SignalMode;
/**
* @ingroup enum
*/
typedef enum XIS_FileType
{
	PKI_RESERVED = 1,
	PKI_DOUBLE = 2,
	PKI_SHORT = 4,
	PKI_SIGNED = 8,
	PKI_ERRORMAPONBOARD = 16,
	PKI_LONG = 32,
	PKI_SIGNEDSHORT = PKI_SHORT | PKI_SIGNED,
	PKI_SIGNEDLONG = PKI_LONG | PKI_SIGNED,
	PKI_FAULTMASK = PKI_LONG | PKI_RESERVED
} XIS_FileType;
/**
* @ingroup enum
*/
typedef enum XIS_Event
{
   XE_ACQUISITION_EVENT = 0x00000001,
   XE_SENSOR_EVENT      = 0x00000002,
   XE_SDCARD_EVENT      = 0x00000004,
   XE_BATTERY_EVENT     = 0x00000005,
   XE_LOCATION_EVENT    = 0x00000006,
   XE_NETWORK_EVENT     = 0x00000007,
   XE_DETECTOR_EVENT    = 0x00000008,
   XE_LIBRARY_EVENT     = 0x00000009,
   XE_SDCARD_FSCK_EVENT = 0x0000000A,
} XIS_Event;
/**
* @ingroup enum
*/
typedef enum XIS_Acquisition_Event
{
    XAE_TRIGOUT          = 0x00000002,
    XAE_READOUT          = 0x00000004,
} XIS_Acquisition_Event;
/**
* @ingroup enum
*/
typedef enum XIS_Sensor_Event
{
    XSE_HALL                            = 0x00000001,
    XSE_SHOCK                           = 0x00000010,
    XSE_TEMPERATURE                     = 0x00000020,
    XSE_TEMPERATURE_BACK_TO_NORMAL      = 0x00000021,
    XSE_THERMAL_SHUTDOWN                = 0x00000022,
} XIS_Sensor_Event;
/**
* @ingroup enum
*/
typedef enum XIS_Battery_Event
{
    XBE_BATTERY_REPORT                  = 0x00000001,
    XBE_BATTERY_WARNING                 = 0x00000002,
} XIS_Battery_Event;
/**
* @ingroup enum
*/
typedef enum XIS_Detector_Event
{
    XDE_BUFFERS_IN_USE                  = 0x00000001,
    XDE_STORED_IMAGE                    = 0x00000002,
    XDE_DROPPED_IMAGE                   = 0x00000003,
} XIS_Detector_Event;
/**
* @ingroup enum
*/
typedef enum XIS_Library_Event
{
	XLE_HIS_ERROR_PACKET_LOSS           = 0x00000001, //!< Frame is lost. not all network packages could be received
} XIS_Library_Event;
typedef void (*XIS_EventCallback)(XIS_Event, UINT, UINT, void *, void *);
HIS_RETURN Acquisition_SetCallbacksAndMessages(HACQDESC pAcqDesc,
					  HWND hWnd,
					  UINT dwErrorMsg, UINT dwLoosingFramesMsg,
					  void (CALLBACK *lpfnEndFrameCallback)(HACQDESC), 
					  void (CALLBACK *lpfnEndAcqCallback)(HACQDESC)
					  );
HIS_RETURN Acquisition_VerifyGenuineness(HACQDESC hAcqDesc, char (*msg)[128], size_t *msg_len, unsigned char (*md)[20]);
HIS_RETURN Acquisition_SetPrivateKey(HACQDESC hAcqDesc, unsigned char (*key_old)[64], unsigned char (*key_new)[64]);