xraylib/Acq.cs


            RTC_STRUCT rtc_value;
            DETECTOR_BATTERY battery;
            uint power_state;
            uint sdcard_state;                     // D0: is mounted flag
            uint sdcard_usage;                     // in %
            uint active_network_config;
            uint lan_status_register;              // D0: LAN enabled
                                                   // D1: LAN up
                                                   // D2: LAN used for image transfer
            uint wlan_status_register;             // D0: WLAN enabled
                                                   // D1: WLAN up
                                                   // D2: WLAN used for image transfer
                                                   // D3: is accesspoint (0 for station)
                                                   // D4: HT20 mode
                                                   // D5: HT40+ mode
                                                   // D6: HT40- mode
            uint signal_strength;                  // in dBm
            uint channel;
            uint exam_flag;
            uint spartan_id;
            CHwHeaderInfoEx spartan_register;
        }

        /* internal voltages and currents of Gen2 detector */
        [StructLayout(LayoutKind.Sequential, Pack = 1, CharSet = CharSet.Ansi)]
        public struct DETECTOR_CURRENT_VOLTAGE
        {
            int iV1;
            int imA1;
            int iV2;
            int imA2;
            int iV3;
            int imA3;
        }

        /** Possible system control actions for XRpad 
        * @ingroup enum
*/
        public enum XRpad_SystemControlEnum : uint
        {
            XRpad_SYSTEM_CONTROL_REBOOT = 0,           // restart XRpad 
            XRpad_SYSTEM_CONTROL_RESTART_NETWORK = 1,  // restart XRpad Network 
            XRpad_SYSTEM_CONTROL_SHUTDOWN = 2,         // shutdown XRpad
            XRpad_SYSTEM_CONTROL_SET_DEEP_SLEEP = 3,   // power down analog circuitry and sensor FPGA
            XRpad_SYSTEM_CONTROL_SET_IDLE = 4          // power up analog circuitry and sensor FPGA
        }

        /**
        * @ingroup enum
*/
        [StructLayout(LayoutKind.Sequential, Pack = 1, CharSet = CharSet.Ansi)]
        public struct XRpad_TempSensor
        {
            char index;

            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 32)]
            string name;

            bool is_virtual;
            byte warn_level;
            double temperature;
        }


        /**
        * @ingroup enum
*/
        [StructLayout(LayoutKind.Sequential, Pack = 1, CharSet = CharSet.Ansi)]
        public struct XRpad_TempSensorReport
        {
            byte system_warn_level;
            byte sensor_count;
            uint shutdown_time;

            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 16)]
            XRpad_TempSensor[] sensors;
        }


        /**
        * @ingroup enum
*/
        public enum XRpad_ChargeMode : uint
        {
            XRpad_NOT_CHARGING = 0,
            XRpad_CHARGING_SLOW = 1,
            XRpad_CHARGING_NORMAL = 2,
            XRpad_CHARGING_FAST = 3,
            XRpad_FULLY_CHARGED = 4,
            XRpad_DISCHARGING = 5
        }


        /**
        * @ingroup enum
*/
        public enum XRpad_BatteryPresence : uint
        {
            XRpad_NO_BATTERY = 0,
            XRpad_BATTERY_INSERTED = 1,
            XRpad_DUMMY_INSERTED = 2
        }


        /**
        * @ingroup enum
*/
        public enum XRpad_BatteryHealth : uint
        {
            XRpad_BATTERY_OK = 0x0000,
            XRpad_COMMUNICATION_ERROR = 0x0001,
            XRpad_TERMINATE_DISCHARGE_ALARM = 0x0002,
            XRpad_UNDERVOLTAGE_ALARM = 0x0004,
            XRpad_OVERVOLTAGE_ALARM = 0x0008,
            XRpad_OVERTEMPERATURE_ALARM = 0x0010,
            XRpad_BATTERY_UNKNOWN_ERROR = 0x0080,

        }


        /**
        * @ingroup enum
*/
        [StructLayout(LayoutKind.Sequential, Pack = 1, CharSet = CharSet.Ansi)]
        public struct XRpad_BatteryStatus
        {
            XRpad_BatteryPresence presence;
            int design_capacity;
            int remaining_capacity;
            int charge_state;
            XRpad_ChargeMode charge_mode;
            int cycle_count;
            int temperature;
            int authenticated;
            int health;
        }



        /**
         * @ingroup enum
         */
        [StructLayout(LayoutKind.Sequential, Pack = 1, CharSet = CharSet.Ansi)]
        public struct XRpad_ShockEvent
        {
            uint timestamp;
            uint critical_sensor1;
            uint critical_sensor2;
            uint critical_sensor3;
            uint warning_sensor1;
            uint warning_sensor2;
            uint warning_sensor3;
        }



        /**
         * @ingroup enum
         */
        [StructLayout(LayoutKind.Sequential, Pack = 1, CharSet = CharSet.Ansi)]
        public struct XRpad_ShockSensorReport
        {
            XRpad_ShockEvent largest;
            XRpad_ShockEvent latest;
        }




        /**
         * @ingroup enum
         */
        [StructLayout(LayoutKind.Sequential, Pack = 1, CharSet = CharSet.Ansi)]
        public struct XRpad_VersionInfo
        {
            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 256)]
            string subversion;

            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 32)]
            string linux_kernel;

            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 32)]
            string software;

            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 32)]
            string hwdriver;

            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 32)]
            string zynq_firmware;

            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 32)]
            string spartan_firmware;

            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 32)]
            string msp_firmware;

            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 32)]
            string pld_firmware;

            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 32)]
            string xrpd;

            [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 32)]
            string wlan;
        }



        /** Possible image transfer channels for XRpad
        * @ingroup enum
*/
        public enum XRpad_DataInterfaceControlEnum : uint
        {
            XRpad_DATA_VIA_LAN = 0,             // use LAN
            XRpad_DATA_VIA_WLAN = 1             // use WLAN
        }


        /**
        * @ingroup enum
*/
        public enum XislLoggingLevels : uint
        {
            LEVEL_TRACE = 0,
            LEVEL_DEBUG,
            LEVEL_INFO,
            LEVEL_WARN,
            LEVEL_ERROR,
            LEVEL_FATAL,
            LEVEL_ALL,
            LEVEL_NONE
        }

        /**
        * @ingroup enum
*/
        // typedef void* XislFtpSession; // IntPtr

        /**
        * @ingroup enum
*/
        // typedef void* XislFileHandle; // IntPtr

        /**
        * @ingroup enum
*/
        public enum XislFileEntryType : uint
        {
            XFT_File = 1,
            XFT_Directory = 2,
            XFT_Link = 4,
            // ...
            XFT_Other = 0x80000000,
            XFT_Any = 0xFFFFFFFF
        }

        /**
        * @ingroup enum
*/
        public enum XislFileStorageLocation : uint
        {
            XFSL_Local = 0,
            XFSL_FTP = 1
        }


        public struct XislFileInfo
        {
            [MarshalAs(UnmanagedType.LPWStr)]
            string filename;

            [MarshalAs(UnmanagedType.LPWStr)]
            string directory;

            [MarshalAs(UnmanagedType.LPWStr)]
            string address;
            uint filesize; // Originally size_t
            XislFileEntryType type;

            [MarshalAs(UnmanagedType.LPWStr)]
            string timestamp;
            // XislFileStorageLocation location;
        }

        /**
        * @ingroup enum
*/
        public enum ProcScriptOperation : uint
        {
            PREBINNING,
            PREMEAN,
            PRESTOREBUFFER,
            OFFSET,
            GAIN,
            MEAN,
            PREVIEW,
            BINNING,
            STOREBUFFER,
            STORESD,
            SEND
        }

        /**
        * @ingroup enum
*/
        public enum OnboardBinningMode : uint
        {
            ONBOARDBINNING2x1 = 0,
            ONBOARDBINNING2x2 = 1,
            ONBOARDBINNING4x1 = 2,
            ONBOARDBINNING4x4 = 3,
            ONBOARDBINNING3x3 = 4,
            ONBOARDBINNING9to4 = 5
        }

        /**
        * @ingroup enum
*/
        public enum XIS_DetectorTriggerMode : uint
        {
            TRIGGERMODE_DDD,
            TRIGGERMODE_DDD_WO_CLEARANCE,
            TRIGGERMODE_STARTSTOP,
            TRIGGERMODE_FRAMEWISE,
            TRIGGERMODE_AED,
            TRIGGERMODE_ROWTAG,
            TRIGGERMODE_DDD_POST_OFFSET,
            TRIGGERMODE_DDD_DUAL_POST_OFFSET
        }

        /**
        * @ingroup enum
*/
        public enum XIS_Detector_TRIGOUT_SignalMode : uint
        {
            TRIGOUT_SIGNAL_FRM_EN_PWM,
            TRIGOUT_SIGNAL_FRM_EN_PWM_INV,
            TRIGOUT_SIGNAL_EP,
            TRIGOUT_SIGNAL_EP_INV,
            TRIGOUT_SIGNAL_DDD_Pulse,
            TRIGOUT_SIGNAL_DDD_Pulse_INV,
            TRIGOUT_SIGNAL_GND,
            TRIGOUT_SIGNAL_VCC
        }

        /**
        * @ingroup enum
*/
        public enum XIS_FileType : uint
        {
            PKI_RESERVED = 1,
            PKI_DOUBLE = 2,
            PKI_SHORT = 4,
            PKI_SIGNED = 8,
            PKI_ERRORMAPONBOARD = 16,
            PKI_LONG = 32,
            PKI_SIGNEDSHORT = PKI_SHORT | PKI_SIGNED,
            PKI_SIGNEDLONG = PKI_LONG | PKI_SIGNED,
            PKI_FAULTMASK = PKI_LONG | PKI_RESERVED
        }

        /**
        * @ingroup enum
*/
        public enum XIS_Event : uint
        {
            XE_ACQUISITION_EVENT = 0x00000001,
            XE_SENSOR_EVENT = 0x00000002,
            XE_SDCARD_EVENT = 0x00000004,
            XE_BATTERY_EVENT = 0x00000005,
            XE_LOCATION_EVENT = 0x00000006,
            XE_NETWORK_EVENT = 0x00000007,
            XE_DETECTOR_EVENT = 0x00000008,
            XE_LIBRARY_EVENT = 0x00000009,
            XE_SDCARD_FSCK_EVENT = 0x0000000A,
        }

        /**
        * @ingroup enum
*/
        public enum XIS_Acquisition_Event : uint
        {
            XAE_TRIGOUT = 0x00000002,
            XAE_READOUT = 0x00000004,
        }

        /**
        * @ingroup enum
*/
        public enum XIS_Sensor_Event : uint
        {
            XSE_HALL = 0x00000001,
            XSE_SHOCK = 0x00000010,
            XSE_TEMPERATURE = 0x00000020,
            XSE_TEMPERATURE_BACK_TO_NORMAL = 0x00000021,
            XSE_THERMAL_SHUTDOWN = 0x00000022,
        }

        /**
        * @ingroup enum
*/
        public enum XIS_Battery_Event : uint
        {
            XBE_BATTERY_REPORT = 0x00000001,
            XBE_BATTERY_WARNING = 0x00000002,
        }

        /**
        * @ingroup enum
*/
        public enum XIS_Detector_Event : uint
        {
            XDE_BUFFERS_IN_USE = 0x00000001,
            XDE_STORED_IMAGE = 0x00000002,
            XDE_DROPPED_IMAGE = 0x00000003,
        }

        /**
        * @ingroup enum
*/
        public enum XIS_Library_Event : uint
        {
            XLE_HIS_ERROR_PACKET_LOSS = 0x00000001, //!< Frame is lost. not all network packages could be received
        }


        // See: https://stackoverflow.com/questions/5235445/pinvoke-c-function-takes-pointer-to-function-as-argument
        // typedef void (* XIS_EventCallback) (XIS_Event, uint, uint, void*, void*);

        // wpe library includes
        /* Error codes */


